--- a/main.css
+++ b/main.css
@@ -1233,6 +1233,88 @@ body {
     background-position: 135px 120px, 80px 18px, 30px 120px, 0px 0px, 75px 75px, -25px -25px;
   }
   
+  /* anbu */
+  
+  .anbuSection {
+    width: 50%;
+    height: 500px;
+    background-color: darkslateblue;
+  }
+  
+  .anbuFlex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    height: 500px;
+  }
+  
+  .anbu {
+    width: 250px;
+    height: 250px;
+    background-image:
+      radial-gradient(circle, crimson 70%, transparent 70% 100%);
+  }
+  
+  .anbu:before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 250px;
+    height: 250px;
+    background-repeat: no-repeat;
+    background-image:
+      radial-gradient(black 40%, grey 45%, transparent 50%),
+      linear-gradient(90deg, black, black),
+      radial-gradient(crimson 40%, lightgrey 45%, transparent 50%),
+      radial-gradient(crimson 40%, lightgrey 45%, transparent 45%),
+      radial-gradient(crimson 40%, lightgrey 45%, transparent 50%),
+      linear-gradient( 155deg, transparent 50%, crimson 50% 55%, transparent 45%),
+      linear-gradient( 165deg, transparent 50%, crimson 50% 55%, transparent 45%),
+      linear-gradient( -165deg, transparent 50%, crimson 50% 55%, transparent 45%),
+      linear-gradient( -155deg, transparent 50%, crimson 50% 55%, transparent 45%),
+      linear-gradient( -150deg, transparent 20%, yellow 25% 30%, gold 30% 70%, yellow 70% 75%, transparent 80% ),
+      linear-gradient( 150deg, transparent 20%, yellow 25% 30%, gold 30% 70%, yellow 70% 75%, transparent 80% ),
+      linear-gradient( -150deg, transparent 30%, darkslategrey 30% 70%, transparent 70% ),
+      linear-gradient( 150deg, transparent 30%, darkslategrey 30% 70%, transparent 70% ),
+      linear-gradient( 150deg, transparent 30%, crimson 30% 70%, transparent 70% ),
+      linear-gradient( -150deg, transparent 30%, crimson 30% 70%, transparent 70% ),
+      radial-gradient(ellipse, white 40%, lightgrey 48%, transparent 48%, transparent 100%),
+      conic-gradient( from 120deg, crimson 0% 20%, transparent 20%),
+      conic-gradient( from 170deg, crimson 0% 20%, transparent 20%),
+      conic-gradient( from 120deg, lightgrey 0% 1%, white 5% 15%, lightgrey 19%, transparent 20%),
+      conic-gradient( from 170deg, lightgrey 0% 1%, white 5% 15%, lightgrey 19%, transparent 20%),
+      linear-gradient( 45deg, transparent 40%, crimson 40% 60%, transparent 60% ),
+      linear-gradient( 45deg, transparent 36%, black 36% 64%, transparent 60% ),
+      linear-gradient( 131deg, transparent 30%, lightsteelblue 35%, dimgrey 45% 65%, darkslategrey 70%, transparent 45%),
+      linear-gradient( 131deg, transparent 54%, black 54% 55%, transparent 55%),
+      linear-gradient( 131deg, transparent 50%, grey 50%, white 55%, transparent 45%);
+    background-size: 40px 25px, 2px 20px, 15px 50px, 20px 90px, 15px 50px, 30px 100px, 30px 100px, 30px 100px, 30px 100px, 20px 10px, 20px 10px, 40px 30px, 40px 30px, 45px 30px, 45px 30px, 220px 300px, 50px 100px, 50px 100px, 100px 150px, 100px 150px, 50px 50px, 55px 55px, 50px 50px, 200px 200px, 270px 350px;
+    background-position: 50% 68%, 50% 75%, 40% 25%, 50% 20%, 60% 25%, 78% 60%, 80% 70%, 20% 70%, 22% 60%, 37% 50%, 63% 50%, 35% 50%, 65% 50%, 67% 47.5%, 33% 47.5%, 50% 50%, 27% -18%, 73% -18%, 15% -70%, 85% -70%, 90% 10%, 91% 9%, 97% 0%, 50% 25%, 100% 50%;
+  }
+  
+  .anbu:after{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    margin: -40px -40px -10px -10px;
+    background-repeat: no-repeat;
+    background-image: 
+      linear-gradient( 45deg, transparent 50%, black 50% 60%, transparent 60%),
+      conic-gradient( from 315deg, crimson 180deg, black 180deg 185deg, transparent 185deg 350deg, black 350deg 360deg),
+      linear-gradient( 70deg, transparent 30%, Gainsboro 30% 75%, transparent 75%),
+      linear-gradient( 70deg, transparent 30%, Gainsboro 30% 75%, transparent 75%),
+      linear-gradient( 70deg, transparent 30%, Gainsboro 30% 75%, transparent 75%),
+      linear-gradient( 70deg, transparent 30%, Gainsboro 30% 75%, transparent 75%),
+      linear-gradient( 131deg, transparent 30%, lightsteelblue 35%, dimgrey 45% 65%, darkslategrey 70%, transparent 45%),
+      radial-gradient( crimson 50%, black 50% 58%, transparent 58% 60%);
+      background-size: 28px 28px, 20px 20px, 20px 10px, 20px 10px, 20px 10px, 20px 10px, 50px 50px, 38px 38px;
+      background-position: 91.6% 5%, 91.5% 5.4%, 88.5% 10%, 85% 14.5%, 81% 19%, 77% 23.5%, 90% 6%, 95% 1%;
+  }
+
   /* strawHat */
   
   .strawHatSection {
@@ -1321,6 +1403,10 @@ body {
     
       .flagSection{
           width: 100%;
+      }
+
+      .anbuSection {
+        width: 100%;
       }
 
       .strawHatSection {
