--- a/main.css
+++ b/main.css
@@ -1564,16 +1564,16 @@ body {
     height: 300px;
     background-repeat: no-repeat;
     background-image: 
-      linear-gradient(40deg, transparent 20%, #edcd44 20% 60%, transparent 60% 100%),
-      linear-gradient(320deg, transparent 20%, #ccb23d 20% 60%, transparent 60% 100%),
-      conic-gradient(at 50% 0%, transparent 45%, #ccb23d 45% 50%, #edcd44 50% 55%, transparent 55%),
-      conic-gradient(at 50% 50%, #ccb23d 0% 14%, transparent 14% 86%, #edcd44 86% 100%),
-      linear-gradient(40deg, transparent 20%, white 20% 60%, transparent 60% 100%),
-      linear-gradient(320deg, transparent 20%, white 20% 60%, transparent 60% 100%),
-      conic-gradient(at 50% 0%, transparent 45%, white 45% 50%, white 50% 55%, transparent 55%),
-      conic-gradient(at 50% 50%, white 0% 14%, transparent 14% 86%, white 86% 100%);
+      linear-gradient(40deg, transparent 19.5%, #edcd44 20% 60%, transparent 60.5% 100%),
+      linear-gradient(320deg, transparent 19.5%, #ccb23d 20% 60%, transparent 60.5% 100%),
+      conic-gradient(at 50% 0%, transparent 44.5%, #ccb23d 45% 50%, #edcd44 50% 55%, transparent 55.5%),
+      conic-gradient(at 50% 50%, #ccb23d 0% 14%, transparent 14.5% 85.5%, #edcd44 86% 100%),
+      linear-gradient(40deg, transparent 19.5%, white 20% 60%, transparent 60.5% 100%),
+      linear-gradient(320deg, transparent 19.5%, white 20% 60%, transparent 60.5% 100%),
+      conic-gradient(at 50% 0%, transparent 44.5%, white 45% 50%, white 50% 55%, transparent 55.5%),
+      conic-gradient(at 50% 50%, white 0% 14%, transparent 14.5% 85.5%, white 86% 100%);
     background-size: 15px 45px, 15px 45px, 20px 40px, 30px 45px, 25px 60px, 25px 60px, 36px 50px, 40px 50px;
-    background-position: 49.77% 96%, 58.77% 96%, 54.77% 94%, 54.77% 106.5%, 49.77% 98%, 58.77% 98%, 54.89% 93%, 54.77% 109%;
+    background-position: 49.77% 96%, 58.77% 96%, 54.5% 94%, 54.77% 106.5%, 49.77% 98%, 58.77% 98%, 54.89% 93%, 54.77% 109%;
 }
 
 .bannerfallText {
@@ -1598,6 +1598,90 @@ body {
   text-align: center;
   align-content: center;
 }
+  
+  /* forest */
+  
+  .forestSection {
+    width: 50%;
+    height: 500px;
+    background-color: #68b859;
+  }
+  
+  .forestFlex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    height: 500px;
+  }
+  
+  .forest {
+    width: 250px;
+    height: 250px;
+  }
+  
+  .forest:before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 250px;
+    height: 250px;
+    background-repeat: no-repeat;
+    background-image:
+      radial-gradient(circle, transparent 70%, #68b859 71% 100%),
+      radial-gradient(circle, #aedea5 70%, transparent 71% 100%),
+      linear-gradient(to right, #aedea5 70%, transparent 71% 100%),
+      radial-gradient(circle, #a0d898 70%, transparent 71% 100%),
+      linear-gradient(to right, #a0d898 70%, transparent 71% 100%),
+      conic-gradient(transparent 37%, #b2cfae 37.5% 62.5%, transparent 63% 100%),
+      conic-gradient(transparent 37%, #b2cfae 37.5% 62.5%, transparent 63% 100%),
+      conic-gradient(transparent 37%, #b2cfae 37.5% 62.5%, transparent 63% 100%),
+      conic-gradient(transparent 37%, #b2cfae 37.5% 62.5%, transparent 63% 100%),
+      radial-gradient(circle, #cdebca 70%, #68b859 71% 100%);
+    background-size: 252px 252px, 200px 200px, 200px 200px, 200px 200px, 200px 200px, 200px 200px, 200px 200px, 200px 200px, 200px 200px, 250px 250px;
+    background-position: 50% 50%, 180% 270%, 380% 272%, -80% 270%, -150% 270%, 50% -110%, -120% -50%, 220% -50%, 50% 60%, 50% 50%;
+  }
+  
+  .forest:after{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 250px;
+    height: 250px;
+    background-repeat: no-repeat;
+    background-image: 
+      radial-gradient(circle, white 70%, transparent 72% 100%),
+      radial-gradient(circle, white 70%, transparent 72% 100%),
+      radial-gradient(circle, white 70%, transparent 72% 100%),
+      radial-gradient(circle, white 70%, transparent 72% 100%),
+      radial-gradient(circle, white 70%, transparent 72% 100%),
+      radial-gradient(circle, white 70%, transparent 72% 100%),
+      radial-gradient(circle, white 70%, transparent 72% 100%),
+      radial-gradient(circle, white 70%, transparent 72% 100%),
+      radial-gradient(circle, white 70%, transparent 72% 100%),
+      radial-gradient(circle, white 70%, transparent 72% 100%),
+      radial-gradient(circle, white 70%, transparent 72% 100%),
+      radial-gradient(circle, white 70%, transparent 72% 100%),
+      radial-gradient(circle, white 70%, transparent 72% 100%),
+      radial-gradient(circle, white 70%, transparent 72% 100%),
+      radial-gradient(circle, white 70%, transparent 72% 100%),
+      radial-gradient(circle, white 70%, transparent 72% 100%),
+      radial-gradient(circle, #8cd07e 70%, transparent 72% 100%),
+      radial-gradient(circle, #8cd07e 70%, transparent 72% 100%),
+      radial-gradient(circle, #6eb85b 70%, transparent 72% 100%),
+      radial-gradient(circle, #6eb85b 70%, transparent 72% 100%),
+      linear-gradient(to right, #6eb85b 100%),
+      radial-gradient(circle, #6eb85b 70%, transparent 72% 100%),
+      radial-gradient(circle, #6eb85b 70%, transparent 72% 100%),
+      linear-gradient(to right, #6eb85b 100%),
+      linear-gradient(to right, #396227 100%),
+      linear-gradient(to right, #396227 100%),
+      linear-gradient(to right, #396227 100%),
+      linear-gradient(to right, #396227 100%);
+    background-size: 35px 35px, 25px 25px, 25px 25px, 35px 35px, 25px 25px, 25px 25px, 35px 35px, 25px 25px, 25px 25px, 35px 35px, 25px 25px, 25px 25px, 15px 15px, 15px 15px, 15px 15px, 15px 15px, 55px 55px, 55px 55px, 35px 35px, 35px 35px, 35px 10px, 45px 45px, 45px 45px, 45px 30px, 15px 25px, 15px 25px, 15px 25px, 15px 25px;
+    background-position: 87% 7%, 95% 9%, 76% 9%, 35% 0%, 45% 2%, 26% 2%, 60% 22%, 67% 28%, 53% 28%, 6% 16%, 0% 22%, 17% 22%, 33% 37%, 28% 37%, 95% 30%, 100% 30%, 19% 77%, 86% 60%, 39% 53%, 39% 47%, 39% 50%, 61% 84%, 61% 73%, 61% 77%, 60% 90%, 25% 85%, 80% 70%, 40% 60%;
+  }
   
   
   @media screen and (max-width: 980px) {
@@ -1643,6 +1727,10 @@ body {
       }
     
       .bannerfallSection{
+          width: 100%;
+      }
+    
+      .forestSection{
           width: 100%;
       }
   }
